--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Lorem ipsum dolor sit amet.</h1>
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et commodi architecto ea adipisci reiciendis cumque, ad perspiciatis totam at obcaecati.</h1>
 </body>
 </html>
